# balance_game

./: .gitignore  BALANCE_GAME_SPEC.md  GAME_FLOW.md  pyproject.toml  requirements.txt
.specstory/history/: 2025-10-29_14-15Z-pythonゲームプロジェクトの要件定義.md  2025-10-29_15-02Z-要件定義と実装の整合性確認.md  2025-10-30_01-18Z-uv-runの起動問題を解決する.md  2025-10-30_01-52Z-ゲーム画面遷移とui作成の方法.md  2025-10-30_04-19Z-画面遷移処理の関数化と改善.md  2025-10-30_04-32Z-新しいpygameゲーム画面の実装.md  2025-10-30_05-17Z-肩と腕の点検出機能の削除.md  2025-10-30_06-04Z-ボールを画面上に表示する.md  2025-11-05_02-48Z-ゲームの物理エンジンをシンプルに実装.md  2025-11-06_00-02Z-指定したサイズの長方形を実装する.md  2025-11-06_02-41Z-円形から正方形への当たり判定変更.md  2025-11-06_03-54Z-pyxelを使ったレトロ風ui改善.md  2025-11-06_04-29Z-レトロゲーム風のタイトル画面作成.md  2025-11-06_05-35Z-キー入力時の効果音追加.md  2025-11-06_06-11Z-タイトルのフォントとサイズを改善する.md  2025-11-06_06-43Z-pizza-balance-game-title-ideas.md  2025-11-12_18-05Z-未使用ファイルと関数の削除.md
balance_game/: README.md  __init__.py  app.py  app_core.py  camera.py  config.py  game_logic.py  overlay.py  physics.py  pose_detector.py  retro.py  sound.py  types.py  ui.py
balance_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
balance_game/assets/: README.md
balance_game/assets/images/: README.md
balance_game/utils/: drawing.py  geometry.py  timing.py
scripts/: run.py
tests/: test_overlay.py  test_physics.py
